# SDL2-CPP-test

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
fabamaq-application/: CMakeLists.txt  fabamaq-application.cpp  fabamaq-application.h
fabamaq-application-sfml/: CMakeLists.txt  fabamaq-application-sfml.cpp  fabamaq-application-sfml.h
fabamaq-application-sfml/include/: ball.h  ball_color.h  game_object.h  pooler.h  vector2.h
fabamaq-application-sfml/include/utils/: utils.h
fabamaq-application-sfml/source/: game_object.cpp  vector2.cpp
fabamaq-application/source/: game_object.cpp  pooler.cpp
include/: action.h  constants.h  error.h  fabamaq-application.h  game.h  game_object.h  pooler.h  vector2.h
resources/ase/: eat-your-color.aseprite
source/: CMakeLists.txt  SDL2-CPP-test.cpp  fabamaq-application.cpp  game.cpp  game_object.cpp  pooler.cpp  vector2.cpp
