# CMakeList.txt : CMake project for fabamaq-application-sfml, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (fabamaq-application-sfml "fabamaq-application-sfml.cpp" "fabamaq-application-sfml.h")

# TODO: Add tests and install targets if needed.
